<resources>
    <string name="app_name">Dircams</string>
    <string name="welcome_worker">Welcome \nWorker</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email_and_password_to_login">Enter your email and password to login</string>
    <string name="logingin">Login…</string>
    <string name="dircams">DIRCAMS</string>
    <string name="follow_up_workers_activities_and_submit_forms">Follow up workers activities and submit forms</string>
    <string name="welcome">Welcome</string>
    <string name="worker_activities">Worker Activities</string>
    <string name="make_interview">Make Interview</string>
    <string name="make_new_interview">Make new Interview</string>
    <string name="form">Form</string>
    <string name="you_not_have_any_question_yet">You not have any question yet</string>
    <string name="no_questions_exist">No Questions exist!</string>
    <string name="submit">Submit</string>
    <string name="interview_questions">Interview Questions</string>
    <string name="interview_title">Interview Title</string>
    <string name="success_submit_interview">Success Submit Interview</string>
    <string name="failed_submit_interview">Failed Submit Interview</string>
    <string name="failed_save_answers">Failed Save Answer!</string>
    <string name="failed_delete_interview">Failed Delete Interview!</string>
    <string name="failed_success_delete">Success Delete Interview!</string>
    <string name="running_to_submit_interview">Running to submit interview …</string>
    <string name="running_to_save_interview">Save interview update …</string>
    <string name="delete_interview_running">Delete Interview …</string>
    <string name="interview_title_required">Interview Title Required</string>
    <string name="location">Location</string>
    <string name="the_location_required">The Location Required!</string>
    <string name="success_select_location">Success Select Location</string>
    <string name="current_location">Current Location</string>
    <string name="update">Update</string>
    <string name="save_update">Save Update</string>
    <string name="submit_interview">Submit Interview</string>
    <string name="wait_a_moment_n_loading_data">Wait a moment \n Loading data …</string>
    <string name="loading">Loading …</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_interview">Delete Interview</string>
    <string name="interview">Interview</string>
    <string name="not_found_image">Not found image!</string>
    <string name="spanish">Spanish</string>
    <string name="sign_out">Sign out</string>
    <string name="english">English</string>
    <string name="worker">Worker</string>
    <string name="update_interview">Update Interview</string>

</resources>