<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/worker"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_english"
                android:icon="@drawable/ic_baseline_language_24"
                android:orderInCategory="100"
                android:title="@string/english" />

            <item
                android:id="@+id/action_spanish"
                android:icon="@drawable/ic_baseline_language_24"
                android:orderInCategory="100"
                android:title="@string/spanish" />

            <item
                android:id="@+id/action_sign_out"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:orderInCategory="100"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>